--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-.DS_Store
-core_22/.DS_Store
-core_22/core_fall_22/.DS_Store
-drive_22/.DS_Store
-core_22/core_fall_22/.ipynb_checkpoints
+core_22/.ipynb_checkpoints
+core_22/fall/.ipynb_checkpoints
+core_22/summer/.ipynb_checkpoints
 drive_22/.ipynb_checkpoints
+drive_22/spring/.ipynb_checkpoints
+.DS_Store
