fin Laney Dec Survey Eval

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ core_22/fall/.ipynb_checkpoints
 core_22/summer/.ipynb_checkpoints
 drive_22/.ipynb_checkpoints
 drive_22/spring/.ipynb_checkpoints
+drive_22/fall/.ipynb_checkpoints
 .DS_Store
+*.ipynb_checkpoints
